# FragIncRNA

./: CMakeLists.txt  LICENSE  README.md  config.toml  minimap2.sh  run_per_reference_k15.sh  run_per_reference_k20.sh  test.sh
.github/workflows/: cmake-single-platform.yml
alignment_results/: plot_alignment_pass_counts.py  plot_selected_lncRNA_gene_overlap.py
bash_scripts/: README.md  check_genome_N_content.sh  download_primates.sh  exact_mapper.sh  exact_mapper_multi.sh  export_lncRNA_bam_alignment_info.sh  find_shared_lncRNA_regions.sh  find_shared_lncRNA_transcripts.sh  lncrna_alignment_qc.sh  summarize_kmer_comparison_qc.sh  summarize_kmer_matches_by_transcript.sh
configs/: config_15.toml  config_18.toml  config_20.toml  config_22.toml  config_24.toml  config_25.toml  config_26.toml  config_27.toml
kmer_results/exact_mapper/: ZNF667_AS1_Mmul10_k35_kmer_locations.summary.tsv
kmer_results/exact_mapper/ZNF667_results/: ZNF667_AS1_exact_validation.tsv
kmer_results/ibf/: kmer_shared_summary_by_k.tsv
kmer_results/multi_exact_mapper/results_33/: HAR1A_GCA_018503265.2_NA19240_pat_hprc_f2_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCA_018503265.2_NA19240_pat_hprc_f2_genomic_k33_kmer_locations.tsv  HAR1A_GCA_018503275.2_NA19240_mat_hprc_f2_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCA_018503275.2_NA19240_mat_hprc_f2_genomic_k33_kmer_locations.tsv  HAR1A_GCA_054883195.1_H9_T2T.hap1_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCA_054883195.1_H9_T2T.hap1_genomic_k33_kmer_locations.tsv  HAR1A_GCA_054883265.1_H9_T2T.hap2_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCA_054883265.1_H9_T2T.hap2_genomic_k33_kmer_locations.tsv  HAR1A_GCF_000258655.2_panpan1.1_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCF_000258655.2_panpan1.1_genomic_k33_kmer_locations.tsv  HAR1A_GCF_002880755.1_Clint_PTRv2_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCF_002880755.1_Clint_PTRv2_genomic_k33_kmer_locations.tsv  HAR1A_GCF_003339765.1_Mmul_10_genomic_k33_kmer_locations.summary.tsv  HAR1A_GCF_003339765.1_Mmul_10_genomic_k33_kmer_locations.tsv  HAR1A_GCF_013052645.1_Mhudiblu_PPA_v0_genomic_k33_kmer_locations.summary.tsv  (+7 more)
plots/results/: data_summary_counts.tsv  plot_har1a_znf667.py  plot_kmer_comparison_qc.py  shared_lncRNA_overlap_summary.tsv  summarize_shared_lncRNA_overlaps.py
plots/src/: plot_data_summary.py  plot_exact_mapper_multi.py  plot_exact_mapper_validation.py  plot_kmer_comparison_qc.py  plot_shared_lncRNA_overlaps.py
src/: config.cpp  config.hpp  fragmenter.cpp  fragmenter.hpp  logger.cpp  logger.hpp  main.cpp  query_processor.cpp  query_processor.hpp  reference_index.cpp  reference_index.hpp
test_data/: query.fasta
test_data/genomes/: test.fasta
test_data/results/: config_k15_per_reference.toml  results_test.tsv  test_kmers.tsv
tests/unit/: test_main.cpp
(+153 files in other folders)
